--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -126,14 +126,50 @@
                                     </span></h1>
                                 <article class="row mb-7 mb-lg-8 mb-xl-9 gap-3">
                                     <div class="col-12 col-lg">
-                                        <p class="text-black fs-10 fs-md-9 fs-xxl-8 lh-xl mb-0 line-clamp-5"><span
-                                                class="fw-bold">
-                                            </span> <span class="fw-bold"></span></p>
+                                        <img src="/public/assets/img/galeries/IMG-WA0087.jpg" class="w-100 team-hero-image" alt="">
                                     </div>
                                     <div class="col-12 col-lg">
-                                        <p class="text-black fs-10 fs-md-9 fs-xxl-8 lh-xl mb-0 line-clamp-5"><span
-                                                class="fw-bold">
-                                            </span> <span class="fw-bold"></span></p>
+                                        <img src="/public/assets/img/galeries/IMG-20220530-WA0018.jpg" class="w-100 team-hero-image" alt="">
+                                    </div>
+                                </article>
+                                <article class="row mb-7 mb-lg-8 mb-xl-9 gap-3">
+                                    <div class="col-12 col-lg">
+                                        <img src="/public/assets/img/galeries/395.jpg" class="w-100 team-hero-image" alt="">
+                                    </div>
+                                    <div class="col-12 col-lg">
+                                        <img src="/public/assets/img/galeries/442.jpg" class="w-100 team-hero-image" alt="">
+                                    </div>
+                                </article>
+                                <article class="row mb-7 mb-lg-8 mb-xl-9 gap-3">
+                                    <div class="col-12 col-lg">
+                                        <img src="/public/assets/img/galeries/485.jpg" class="w-100 team-hero-image" alt="">
+                                    </div>
+                                    <div class="col-12 col-lg">
+                                        <img src="/public/assets/img/galeries/622.jpg" class="w-100 team-hero-image" alt="">
+                                    </div>
+                                </article>
+                                <article class="row mb-7 mb-lg-8 mb-xl-9 gap-3">
+                                    <div class="col-12 col-lg">
+                                        <img src="/public/assets/img/galeries/296.jpg" class="w-100 team-hero-image" alt="">
+                                    </div>
+                                    <div class="col-12 col-lg">
+                                        <img src="/public/assets/img/galeries/968.jpg" class="w-100 team-hero-image" alt="">
+                                    </div>
+                                </article>
+                                <article class="row mb-7 mb-lg-8 mb-xl-9 gap-3">
+                                    <div class="col-12 col-lg">
+                                        <img src="/public/assets/img/galeries/IMG-20220530-WA0083.jpg" class="w-100 team-hero-image" alt="">
+                                    </div>
+                                    <div class="col-12 col-lg">
+                                        <img src="/public/assets/img/galeries/930.jpg" class="w-100 team-hero-image" alt="">
+                                    </div>
+                                </article>
+                                <article class="row mb-7 mb-lg-8 mb-xl-9 gap-3">
+                                    <div class="col-12 col-lg">
+                                        <img src="/public/assets/img/galeries/IMG-WA0015.jpg" class="w-100 team-hero-image" alt="">
+                                    </div>
+                                    <div class="col-12 col-lg">
+                                        <img src="/public/assets/img/galeries/IMG-WA0084.jpg" class="w-100 team-hero-image" alt="">
                                     </div>
                                 </article>
                             </section>
