--- a/pages/qui_sommes_nous.html
+++ b/pages/qui_sommes_nous.html
@@ -216,15 +216,14 @@
                             </div>
                           </article>
                           <article class="d-flex flex-column flex-lg-row justify-content-center align-items-center mb-8 mb-lg-10">
-                            <img class="img-fluid badhon" src="/public/assets/img/team/badhon.png" alt="" />
+                            <img class="img-fluid badhon" src="/public/assets/img/team/GC.jfif" alt="" />
                             <div class="about-card">
-                              <h1 class="fs-8 fs-md-7 fs-xxl-6 text-success fw-bold">Meet Badhon</h1>
+                              <h1 class="fs-8 fs-md-7 fs-xxl-6 text-success fw-bold">Gaoussou Cone</h1>
                               <p class="fs-10 fs-md-9 fs-xxl-8 text-primary mb-0 line-clamp-5">
-                                Dhruba Badhon lives in Dhaka with her husband,
-                                Raihan Nil, their daughter, Shimul and two cats,
-                                Pantha and Sanji. She began her professional carrier
-                                at a scam house named Hexit. At the summer of 2069,
-                                she created a ...
+                                Titulaire d'un Brevet de Technicien en Génie Industriel, 
+                                il est Membre Fondateur de l'Association des Propriétaires 
+                                de Forêts Naturelles et Plantations d'Afféry. Travail depuis 
+                                2011 à APFNP en qualité de Secrétaire Général de ladite organisation. 
                               </p>
                             </div>
                           </article>
@@ -234,29 +233,29 @@
                             <div class="row mb-13 w-lg-75 mb-lg-5 mx-auto gy-2 gy-lg-5 h-100">
                               <div class="col-12 col-md-6 col-lg-4 px-3 text-center mb-5 mb-lg-0">
                                 <div class="position-relative w-75 w-md-100 mx-auto mb-2"><img class="w-100 team-hero-image"
-                                    src="assets/img/team/team/6.png" alt="" />
+                                    src="/public/assets/img/team/team/140.jpg" alt="" />
                                   <div class="social-icons"><a href="#!"> <span class="uil uil-facebook" hidden></span></a><a href="#!">
                                       <span class="uil uil-instagram-alt" hidden></span></a><a href="#!"> <span
                                         class="uil uil-linkedin" hidden></span></a></div>
                                 </div>
-                                <h3 class="fs-9 fs-md-8 text-success fw-bold mb-1">James T. Kirk</h3>
-                                <h5 class="text-black fs-10 fs-md-9 fw-medium text-capitalize mb-3">CFO</h5>
-                                <p class="fs-10 fs-md-9 fs-xxl-8 text-primary lh-xl mb-0 line-clamp-2">We're
-                                  trying to teach you a technique here and how to use it.</p>
+                                <h3 class="fs-9 fs-md-8 text-success fw-bold mb-1">Alain Yao</h3>
+                                <h5 class="text-black fs-10 fs-md-9 fw-medium text-capitalize mb-3">Chargé des Programmes et Projets</h5>
+                                <!-- <p class="fs-10 fs-md-9 fs-xxl-8 text-primary lh-xl mb-0 line-clamp-2">We're
+                                  trying to teach you a technique here and how to use it.</p> -->
                               </div>
                               <div class="col-12 col-md-6 col-lg-4 px-3 text-center mb-5 mb-lg-0">
                                 <div class="position-relative w-75 w-md-100 mx-auto mb-2"><img class="w-100 team-hero-image"
-                                    src="assets/img/team/team/5.png" alt="" />
+                                    src="/public/assets/img/team/team/448.jpg" alt="" />
                                   <div class="social-icons"><a href="#!"> <span class="uil uil-facebook" hidden></span></a><a href="#!">
                                       <span class="uil uil-instagram-alt" hidden></span></a><a href="#!"> <span
                                         class="uil uil-linkedin" hidden></span></a></div>
                                 </div>
-                                <h3 class="fs-9 fs-md-8 text-success fw-bold mb-1">Montgomery Scott</h3>
-                                <h5 class="text-black fs-10 fs-md-9 fw-medium text-capitalize mb-3">Accounts</h5>
-                                <p class="fs-10 fs-md-9 fs-xxl-8 text-primary lh-xl mb-0 line-clamp-2">Just make a
-                                  decision and let it go.</p>
+                                <h3 class="fs-9 fs-md-8 text-success fw-bold mb-1">Atsé Arielle Gertrude</h3>
+                                <h5 class="text-black fs-10 fs-md-9 fw-medium text-capitalize mb-3">Bénévole</h5>
+                                <!-- <p class="fs-10 fs-md-9 fs-xxl-8 text-primary lh-xl mb-0 line-clamp-2">Just make a
+                                  decision and let it go.</p> -->
                               </div>
-                              <div class="col-12 col-md-6 col-lg-4 px-3 text-center mb-5 mb-lg-0">
+                              <!-- <div class="col-12 col-md-6 col-lg-4 px-3 text-center mb-5 mb-lg-0">
                                 <div class="position-relative w-75 w-md-100 mx-auto mb-2"><img class="w-100 team-hero-image"
                                     src="assets/img/team/team/4.png" alt="" />
                                   <div class="social-icons"><a href="#!"> <span class="uil uil-facebook" hidden></span></a><a href="#!">
@@ -267,8 +266,8 @@
                                 <h5 class="text-black fs-10 fs-md-9 fw-medium text-capitalize mb-3">Marketing</h5>
                                 <p class="fs-10 fs-md-9 fs-xxl-8 text-primary lh-xl mb-0 line-clamp-2">We'll throw
                                   some old gray clouds in here just sneaking around...</p>
-                              </div>
-                              <div class="col-12 col-md-6 col-lg-4 px-3 text-center mb-5 mb-lg-0">
+                              </div> -->
+                              <!-- <div class="col-12 col-md-6 col-lg-4 px-3 text-center mb-5 mb-lg-0">
                                 <div class="position-relative w-75 w-md-100 mx-auto mb-2"><img class="w-100 team-hero-image"
                                     src="assets/img/team/team/3.png" alt="" />
                                   <div class="social-icons"><a href="#!"> <span class="uil uil-facebook" hidden></span></a><a href="#!">
@@ -279,8 +278,8 @@
                                 <h5 class="text-black fs-10 fs-md-9 fw-medium text-capitalize mb-3">CFO</h5>
                                 <p class="fs-10 fs-md-9 fs-xxl-8 text-primary lh-xl mb-0 line-clamp-2">
                                   Everything's not great in life, but we can still find beauty in it.</p>
-                              </div>
-                              <div class="col-12 col-md-6 col-lg-4 px-3 text-center mb-5 mb-lg-0">
+                              </div> -->
+                              <!-- <div class="col-12 col-md-6 col-lg-4 px-3 text-center mb-5 mb-lg-0">
                                 <div class="position-relative w-75 w-md-100 mx-auto mb-2"><img class="w-100 team-hero-image"
                                     src="assets/img/team/team/2.png" alt="" />
                                   <div class="social-icons"><a href="#!"> <span class="uil uil-facebook" hidden></span></a><a href="#!">
@@ -291,8 +290,8 @@
                                 <h5 class="text-black fs-10 fs-md-9 fw-medium text-capitalize mb-3">CTO</h5>
                                 <p class="fs-10 fs-md-9 fs-xxl-8 text-primary lh-xl mb-0 line-clamp-2">That is
                                   when you can experience true joy, when you have no fear.</p>
-                              </div>
-                              <div class="col-12 col-md-6 col-lg-4 px-3 text-center mb-5 mb-lg-0">
+                              </div> -->
+                              <!-- <div class="col-12 col-md-6 col-lg-4 px-3 text-center mb-5 mb-lg-0">
                                 <div class="position-relative w-75 w-md-100 mx-auto mb-2"><img class="w-100 team-hero-image"
                                     src="assets/img/team/team/1.png" alt="" />
                                   <div class="social-icons"><a href="#!"> <span class="uil uil-facebook" hidden></span></a><a href="#!">
@@ -304,7 +303,7 @@
                                   resource</h5>
                                 <p class="fs-10 fs-md-9 fs-xxl-8 text-primary lh-xl mb-0 line-clamp-2">Let's make
                                   a nice big leafy tree.</p>
-                              </div>
+                              </div> -->
                             </div>
                           </article>
                         </section>
