--- a/pages/qui_sommes_nous.html
+++ b/pages/qui_sommes_nous.html
@@ -219,7 +219,7 @@
                             <img class="img-fluid badhon" src="/public/assets/img/team/GC.jfif" alt="" />
                             <div class="about-card">
                               <h1 class="fs-8 fs-md-7 fs-xxl-6 text-success fw-bold">Gaoussou Cone</h1>
-                              <p class="fs-10 fs-md-9 fs-xxl-8 text-primary mb-0 line-clamp-5">
+                              <p class="fs-10 fs-md-9 fs-xxl-8 text-primary mb-0 line-clamp-5 text-justify">
                                 Titulaire d'un Brevet de Technicien en Génie Industriel, 
                                 il est Membre Fondateur de l'Association des Propriétaires 
                                 de Forêts Naturelles et Plantations d'Afféry. Travail depuis 
