--- a/pages/video.html
+++ b/pages/video.html
@@ -126,14 +126,39 @@
                                     </span></h1>
                                 <article class="row mb-7 mb-lg-8 mb-xl-9 gap-3">
                                     <div class="col-12 col-lg">
-                                        <p class="text-black fs-10 fs-md-9 fs-xxl-8 lh-xl mb-0 line-clamp-5"><span
-                                                class="fw-bold">
-                                            </span> <span class="fw-bold"></span></p>
+                                        <video src="/public/assets/videos/VID-20220530-WA0160.mp4" controls width="500" height="236"></video>
                                     </div>
                                     <div class="col-12 col-lg">
-                                        <p class="text-black fs-10 fs-md-9 fs-xxl-8 lh-xl mb-0 line-clamp-5"><span
-                                                class="fw-bold">
-                                            </span> <span class="fw-bold"></span></p>
+                                        <video src="/public/assets/videos/VID-20220530-WA0161.mp4" controls width="500" height="236"></video>
+                                    </div>
+                                </article>
+                                <article class="row mb-7 mb-lg-8 mb-xl-9 gap-3">
+                                    <div class="col-12 col-lg">
+                                        <video src="/public/assets/videos/VID-20220530-WA0163.mp4" controls width="500" height="236"></video>
+                                    </div>
+                                    <div class="col-12 col-lg">
+                                        <video src="/public/assets/videos/VID-20220530-WA0164.mp4" controls width="500" height="236"></video>
+                                    </div>
+                                </article>
+                                <article class="row mb-7 mb-lg-8 mb-xl-9 gap-3">
+                                    <div class="col-12 col-lg">
+                                        <video src="/public/assets/videos/VID-20220702-WA0017.mp4" controls width="500" height="236"></video>
+                                    </div>
+                                    <div class="col-12 col-lg">
+                                        <video src="/public/assets/videos/VID-20220702-WA0018.mp4" controls width="500" height="236"></video>
+                                    </div>
+                                </article>
+                                <article class="row mb-7 mb-lg-8 mb-xl-9 gap-3">
+                                    <div class="col-12 col-lg">
+                                        <video src="/public/assets/videos/VID-20220702-WA0019.mp4" controls width="500" height="236"></video>
+                                    </div>
+                                    <div class="col-12 col-lg">
+                                        <video src="/public/assets/videos/Video 2022-12-08 at 11.34.33.mp4" controls width="500" height="236"></video>
+                                    </div>
+                                </article>
+                                <article class="row mb-7 mb-lg-8 mb-xl-9 gap-3">
+                                    <div class="col-12 col-lg">
+                                        <video src="/public/assets/videos/videome.mp4" controls width="500" height="236"></video>
                                     </div>
                                 </article>
                             </section>
