--- a/pages/accords-internationaux-ratifies.html
+++ b/pages/accords-internationaux-ratifies.html
@@ -104,7 +104,7 @@
                                 </h1>
                                 <article class="row mb-7 mb-lg-8 mb-xl-9 gap-3">
                                     <div class="col-12 col-lg">
-                                        <a href="'/public/assets/docs/air/Convention cadre sur le Changement climatique.pdf'" download="Convention cadre sur le Changement climatique.pdf" title="Convention cadre sur le Changement climatique">
+                                        <a href="/public/assets/docs/air/Convention cadre sur le Changement climatique.pdf" download="Convention cadre sur le Changement climatique.pdf" title="Convention cadre sur le Changement climatique">
                                             <span>Convention cadre sur le Changement climatique</span>
                                             <button class="btn btn-gradient fs-8 mt-1 d-inline-flex"><span>Télécharger</span></button>
                                         </a>
