--- a/pages/accords-internationaux.html
+++ b/pages/accords-internationaux.html
@@ -103,7 +103,7 @@
                                 </h1>
                                 <article class="row mb-7 mb-lg-8 mb-xl-9 gap-3">
                                     <div class="col-12 col-lg">
-                                        <a href="/assets/docs/ai/APV FLEGT CI-UE SIGNE LE 19 FEVRIER 2024.pdf" download="APV FLEGT CI-UE SIGNE LE 19 FEVRIER 2024.pdf" title="ACCORD DE PARTENARIAT VOLONTAIRE ENTRE LA RÉPUBLIQUE DE CÔTE D'lVOIRE ET L'UNION EUROPÉENNE">
+                                        <a href="/public/assets/docs/ai/APV FLEGT CI-UE SIGNE LE 19 FEVRIER 2024.pdf" download="APV FLEGT CI-UE SIGNE LE 19 FEVRIER 2024.pdf" title="ACCORD DE PARTENARIAT VOLONTAIRE ENTRE LA RÉPUBLIQUE DE CÔTE D'lVOIRE ET L'UNION EUROPÉENNE">
                                             <span>ACCORD DE PARTENARIAT VOLONTAIRE ENTRE LA RÉPUBLIQUE DE CÔTE D'lVOIRE ET L'UNION EUROPÉENNE</span>
                                         <button class="btn btn-gradient fs-8 mt-1 d-inline-flex"><span>Télécharger</span></button>
                                         </a>
