--- a/pages/lois.html
+++ b/pages/lois.html
@@ -134,7 +134,7 @@
                                         </a>
                                     </div>
                                     <div class="col-12 col-lg">
-                                        <a href="/public/assets/docs/lois/CODE DE L\'EAU_231211_161835.pdf'"
+                                        <a href="/public/assets/docs/lois/CODE DE L'EAU_231211_161835.pdf"
                                             download="CODE DE L'EAU_231211_161835.pdf">
                                             <span>Le code de l'eau</span>
                                             <button
@@ -144,7 +144,7 @@
                                 </article>
                                 <article class="row mb-7 mb-lg-8 mb-xl-9 gap-3">
                                     <div class="col-12 col-lg">
-                                        <a href="/public/assets/docs/lois/Code_de_l\'environnement_2023.pdf'"
+                                        <a href="/public/assets/docs/lois/Code_de_l'environnement_2023.pdf"
                                             download="Code_de_l'environnement_2023.pdf">
                                             <span>Le code de l'environnement 2023</span>
                                             <button
